--- a/RRamphibian.Rmd
+++ b/RRamphibian.Rmd
@@ -2,7 +2,7 @@
 title: "Reproducible Research with R and RStudio"
 author: "Dale Steele"
 date: "March 16, 2015"
-output: slidy_presentation
+output: ioslides_presentation
 ---
 
 ```{r, echo=FALSE, message=FALSE}
@@ -94,29 +94,18 @@ img2 <- readPNG("Images\\RStudio.png")
 grid.raster(img2)
 ```
 
-## Reproducible today | Still reproducible in 5 years?
-
-```{r}
-head(devtools::session_info()$packages)
-```
-
-## Future Proofing
-
-* Language engines (julia, python, sas)
-* [Packrat: Reproducible package management for R](http://rstudio.github.io/packrat/)
-* Virtual Machines (on the cloud)
-
 ## Literate Programming options 
 
-* R noweb (.Rnw))
-    - R code chunks
-    - LaTeX
+* Sweave and knitr use a special text file with extension R `.Rnw`
+    - `R` code chunks are started with `<< >>=` and ended with `@`
+    - A `LaTeX` document that includes `R` code
+    - Inline code is written `\Sexpr{ }`
     - Output(using Sweave or knitr) to produce pdf
 
 * Rmarkdown (.Rmd)
-    - R code chunks (and now other code 'engines' including SAS, python, awk)
-    - LaTeX or (r)markdown
-    - "knit" (using knitr), then output (using pandoc) to multiple possible formats
+    - `R` code chunks (and now other code 'engines' including SAS, python, awk)
+    - `LaTeX` or `(r)markdown`
+    - "knit" (using `knitr`), then output (using `pandoc`) to multiple possible formats
         + pdf, web pages, html slides, even MSWord
 
 
@@ -174,12 +163,17 @@ A better estimate for $\pi$ is `r pi_M`
 
 ## Equations in R Markdown
 
-* LaTeX Inline Equations -- flanking $
+* `LaTeX` Inline Equations -- flanking $
+
+```
+The Arithmetic mean is equal to $\frac{1}{n} \sum_{i=i}^{n} x_{i}$,
+or the summation of n numbers devided by n.
+```
 
 The Arithmetic mean is equal to $\frac{1}{n} \sum_{i=i}^{n} x_{i}$,
 or the summation of n numbers devided by n.
 
-* LaTeX Display Equations -- flanking $$
+* `LaTeX` Display Equations -- flanking $$
 
 $$
   \begin{aligned}
@@ -189,9 +183,9 @@ $$
   \end{aligned}
 $$
 
-## Painless and beautiful figures
+## No Fret Figures
 
-```{r ggplotFigure, echo=FALSE, message=FALSE}
+```{r ggplotFigure, echo=TRUE, message=FALSE}
 library(ggplot2)
 qplot(speed, dist, data=cars) + geom_smooth()
 ```
@@ -215,7 +209,7 @@ OR <- exp(cbind(OR=coef(m), confint(m)))
 kable(OR)
 ```
 
-## Beautiful model tables
+## Beautiful model tables using `texreg`
 ```{r texreg, results='asis'}
 htmlreg(m, caption="Age at Menarche", caption.above=TRUE,
         inline.css = TRUE, doctype = TRUE, html.tag = TRUE,
@@ -231,6 +225,13 @@ htmlreg(m, caption="Age at Menarche", caption.above=TRUE,
 img4 <- readPNG("Images\\my_github.png")
 grid.raster(img4)
 ```
+
+## Why Use git/github?
+* Provides secure backup
+* Tracks the history of all changes to every file
+* Facilitates working on multiple computers
+* Allows frequent "snapshots" (`commits`) of code
+* Great for collaboration
 
 ## Conclusions
 
@@ -253,10 +254,23 @@ grid.raster(img4)
 * However, relies on a complex, rapidly changing toolchain
     - (knitr, rmarkdown, markdown,[pandoc](http://johnmacfarlane.net/pandoc/))
 
+## Reproducible today | Still reproducible in 5 years?
+
+```{r}
+head(devtools::session_info()$packages)
+```
+
+## Future Proofing
+
+* Language engines (julia, python, sas)
+* [Packrat: Reproducible package management for R](http://rstudio.github.io/packrat/)
+* Virtual Machines (on the cloud)
 
 ## My Favorite Books and Web Resources
 
 [Reproducible Research with R and R Studio](http://www.crcpress.com/product/isbn/9781466572843)
+
+[Tools for Reproducible Research and Dynamic Documents with R](http://www.stat.tamu.edu/~mmclean/iamcs2/#1)
 
 [initial steps toward reproducible research](http://kbroman.org/steps2rr/)
 
